Bug 341405 - Tabs can't be reordered by DND
Summary: Tabs can't be reordered by DND
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks: 337512
  Show dependency treegraph
 
Reported: 2014-11-29 15:15 UTC by Eike Hein
Modified: 2015-04-03 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-11-29 15:15:22 UTC
TODO:

- Any sort of DND code for ViewTree.
- DND on the classic tab bar is merely disabled, because we need to figure out how to implement the legal-drop-position constraints there (don't drag tabs out of "subtree", don't allow dragging special tabs like WNO into the network tabs section).

Reproducible: Always
Comment 1 Eike Hein 2015-03-31 23:26:33 UTC
Git commit dfc90609c1f96766b4deb3e016d72ad255b00a70 by Eike Hein.
Committed on 31/03/2015 at 23:24.
Pushed by hein into branch '1.6'.

Renable tab dragging.

Switching from the tab bar to the tree list will resort tabs
into tree topology again.

Just leaves DND for the tree now ...

M  +138  -60   src/viewer/viewcontainer.cpp
M  +2    -0    src/viewer/viewcontainer.h

http://commits.kde.org/konversation/dfc90609c1f96766b4deb3e016d72ad255b00a70
Comment 2 Eike Hein 2015-04-03 22:48:52 UTC
Git commit a341c48fa5f1e1bd6141355f3a01d640bd47988c by Eike Hein.
Committed on 03/04/2015 at 22:48.
Pushed by hein into branch '1.6'.

Reimplement ViewTree DND reordering.

M  +157  -1    src/viewer/viewcontainer.cpp
M  +23   -1    src/viewer/viewcontainer.h
M  +2    -2    src/viewer/viewspringloader.cpp
M  +52   -14   src/viewer/viewtree.cpp
M  +7    -0    src/viewer/viewtree.h

http://commits.kde.org/konversation/a341c48fa5f1e1bd6141355f3a01d640bd47988c