Reimplement ViewTree DND reordering.

BUG:341405